--- a/_config.yml
+++ b/_config.yml
@@ -21,31 +21,31 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Poorduck                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Kwak kwak   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Just another hackthebox writeups website powered by poorduck
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://x00tex.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: x00tex             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: p00rduck            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: p00rduck
+  email: x00tex-writeups.3us6n@simplelogin.co             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/p00rduck      # change to your twitter homepage
+    - https://github.com/x00tex       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -61,6 +61,10 @@ google_analytics:
   pv:
     proxy_endpoint:   # fill in the Google Analytics superProxy endpoint of Google App Engine
     cache_path:       # the local PV cache data, friendly to visitors from GFW region
+
+
+plugins:
+  - jekyll-seo-tag
 
 # Prefer color scheme setting.
 #
@@ -83,7 +87,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/img/poorduck.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
